Add Hendrik, Riivo

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
 <p><a href="http://ikt.khk.ee/%7Emattias.hint/" target="_blank">Mattias, Uku, Sander H</a></p>
 
+<p><a href="http://ikt.khk.ee/%7Ehendrik.hunt/" target="_blank">Hendrik</a></p>
+
 <p><a href="http://hener.my.ee/margo/VS14/" target="_blank">Margo, Marta, Aksel</a></p>
 
 <p><a href="http://sil.herobo.com/leheke/" target="_blank">Silver</a></p>
@@ -50,6 +52,8 @@
 <p><a href="http://ikt.khk.ee/%7Eraul.muser/" target="_blank">Raul</a></p>
 
 <p><a href="http://greenlabelseo.com/vs14/" target="_blank">Rait</a></p>
+
+<p><a href="http://ikt.khk.ee/%7Eriivo.stolts/" target="_blank">Riivo</a></p>
 
 <p><a href="http://educorp.github.io/" target="_blank">Ott</a></p>
 
