--- a/lingid.html
+++ b/lingid.html
@@ -1,4 +1,4 @@
-HTML koodi kiiremaks ja mugavamaks kirjutamiseks:
+HTML koodi kiiremaks ja mugavamaks kirjutamiseks: <br/>
 <a href="https://www.youtube.com/watch?v=wWgY9eiO4ns">Emmet</a>
-
+<br/><br/>
 <a href="http://www.sitepoint.com/phpstorm-top-productivity-hacks-shortcuts/">PhpStorm – Top Productivity Hacks and Shortcuts</a>
