Add teise perioodi projektid

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
 <br/>
 
+<p><a href="https://docs.google.com/a/khk.ee/spreadsheets/d/1zIakwWWe2yzVs-8cAr2eu3KebVu0fjZfgHI2g17YuW8/edit#gid=0" target="_blank"><strong>Teise perioodi projektid</strong></a></p>
+
 <p><a href="http://ikt.khk.ee/~christo.alliksoo/veebileht/" target="_blank">Christo</a></p>
 
 <p><a href="http://ikt.khk.ee/%7Ealari.heinsoo/" target="_blank">Alari</a></p>
