Add Merike, restructure

--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
 
         <section id="main_content">
           <h1>
-<a id="veebilehed" class="anchor" href="#veebilehed" aria-hidden="true"><span class="octicon octicon-link"></span></a>Veebilehed</h1>
-
-<br/>
 
 <p><a href="https://docs.google.com/a/khk.ee/spreadsheets/d/1zIakwWWe2yzVs-8cAr2eu3KebVu0fjZfgHI2g17YuW8/edit#gid=0" target="_blank"><strong>Teise perioodi projektid</strong></a></p>
+
+<p><strong>Esimese perioodi veebilehed</strong></p>
 
 <p><a href="http://ikt.khk.ee/~christo.alliksoo/veebileht/" target="_blank">Christo</a></p>
 
@@ -60,6 +59,8 @@
 <p><a href="http://greenlabelseo.com/vs14/" target="_blank">Rait</a></p>
 
 <p><a href="http://ikt.khk.ee/%7Eriivo.stolts/" target="_blank">Riivo</a></p>
+
+<p><a href="http://web.zone.ee/minuveebileht/" target="_blank">Merike</a></p>
 
 <p><a href="http://educorp.github.io/" target="_blank">Ott</a></p>
 
