--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         <section id="main_content">
           <h1>
 
-<p><a href="https://docs.google.com/a/khk.ee/spreadsheets/d/1zIakwWWe2yzVs-8cAr2eu3KebVu0fjZfgHI2g17YuW8/edit#gid=0" target="_blank"><strong>Teise perioodi projektid</strong></a></p>
+<p><h2><a href="https://docs.google.com/a/khk.ee/spreadsheets/d/1zIakwWWe2yzVs-8cAr2eu3KebVu0fjZfgHI2g17YuW8/edit#gid=0" target="_blank"><strong>Teise perioodi projektid</strong></a></h2></p>
 
-<p><strong>Esimese perioodi veebilehed</strong></p>
+<br/>
+
+<p><strong>Esimese perioodi veebilehed:</strong></p>
 
 <p><a href="http://ikt.khk.ee/~christo.alliksoo/veebileht/" target="_blank">Christo</a></p>
 
