--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>Veebiarendus</h1>
+          <h1>Veebiarendus VS14</h1>
           <h2></h2>
         </header>
 <!--
