Add Hener and Timo

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
 <p><a href="http://ikt.khk.ee/%7Emattias.hint/" target="_blank">Mattias, Uku, Sander H</a></p>
 
+<p><a href="http://hener.my.ee/projekt/" target="_blank">Hener, Timo</a></p>
+
 <p><a href="http://ikt.khk.ee/%7Ehendrik.hunt/" target="_blank">Hendrik</a></p>
 
 <p><a href="http://hener.my.ee/margo/VS14/" target="_blank">Margo, Marta, Aksel</a></p>
